# ClipboardXX

./: .gitignore  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classAutoCopyEvent-members.html  classAutoCopyEvent.html  classAutoCopyEvent.js  classAutoCopyEvent__coll__graph.map  classAutoCopyEvent__coll__graph.md5  classAutoCopyEvent__inherit__graph.map  classAutoCopyEvent__inherit__graph.md5  classClearEvent-members.html  classClearEvent.html  classClearEvent.js  classClearEvent__coll__graph.map  classClearEvent__coll__graph.md5  classClearEvent__inherit__graph.map  classClearEvent__inherit__graph.md5  classClipboardAdapter-members.html  classClipboardAdapter.html  classClipboardAdapter.js  classClipboardAdapter__coll__graph.map  classClipboardAdapter__coll__graph.md5  classClipboardAdapter__inherit__graph.map  classClipboardAdapter__inherit__graph.md5  classClipboardEvent-members.html  classClipboardEvent.html  classClipboardEvent.js  classClipboardEvent__coll__graph.map  classClipboardEvent__coll__graph.md5  classClipboardEvent__inherit__graph.map  classClipboardEvent__inherit__graph.md5  classClipboardInterface-members.html  classClipboardInterface.html  classClipboardInterface.js  classClipboardInterface__coll__graph.map  classClipboardInterface__coll__graph.md5  classClipboardInterface__inherit__graph.map  (+612 more)
Clipboard++/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Clipboard++.cpp  ClipboardXX.cpp  ClipboardXX.h  GlobalFunctions.cpp  GlobalFunctions.h  icon.rc  resources.qrc  vcpkg.json
Clipboard++/ClipboardLogic/: CMakeLists.txt
Clipboard++/ClipboardLogic/Clipboard/: ClipboardAdapter.h
Clipboard++/ClipboardLogic/HotKeyListener/: HotKeyListener.cpp  HotKeyListener.h
Clipboard++/ClipboardLogic/KeyShortCuts/: KeyShortCut.cpp  KeyShortCut.h  KeyShortCutManager.cpp
Clipboard++/ClipboardLogic/MemoryCells/: MemoryCell.cpp  MemoryCellManager.cpp  MemoryCellManager.h
Clipboard++/QClipboard/: CMakeLists.txt  ClipboardAdapter.cpp  ClipboardAdapter.h  ClipboardInterface.h  ClipboardListener.cpp  ClipboardListener.h
Clipboard++/QClipboard/Clipboard/: ClipboardInterface.h
Clipboard++/QClipboard/HotKeyListener/: HotKeyListener.cpp
Clipboard++/QClipboard/KeyShortCuts/: KeyShortCut.cpp  KeyShortCut.h  KeyShortCutManager.cpp  KeyShortCutManager.h
Clipboard++/QClipboard/MemoryCells/: MemoryCell.cpp  MemoryCell.h  MemoryCellManager.cpp  MemoryCellManager.h
Clipboard++/QClipboard/Utils/: StringUtils.h
Clipboard++/RmlUI/Backends/: CMakeLists.txt  RmlUi_Backend.h  RmlUi_Backend_SDL_GL3.cpp  RmlUi_Include_Windows.h  RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h
Clipboard++/RmlUI/Elements/: CMakeLists.txt  ElementClipboard.cpp  ElementClipboard.h  ElementEdit.cpp  ElementEdit.h  ElementFileManager.cpp  ElementFileManager.h  ElementShortCuts.cpp  ElementShortCuts.h
Clipboard++/RmlUI/EventHandlers/: CMakeLists.txt  EventListener.cpp  EventListener.h  EventListenerInstancer.cpp  EventListenerInstancer.h  EventManager.cpp  EventManager.h
Clipboard++/RmlUI/EventHandlers/Clipboard++Events/: CMakeLists.txt  Clipboard++Event.h  CopyEvent.cpp  EditCloseEvent.h  EditEvent.cpp  EditEvent.h  ExpandEvent.h  ExportCloseEvent.cpp  ExportCloseEvent.h  ExportFileEvent.cpp  ExportSearchEvent.cpp  ExportSearchEvent.h  HelpEvent.cpp  ImportCloseEvent.h  ImportEvent.cpp  ImportFileEvent.cpp  ImportSearchEvent.h  InsertEvent.cpp  InsertEvent.h  PasteEvent.h  SearchEvent.cpp  SearchEvent.h  SlotEvent.h  WindowFocusEvent.cpp  WindowFocusEvent.h
Clipboard++/RmlUI/EventHandlers/Clipboard++Events/Edit/: EditCloseEvent.cpp  EditCloseEvent.h  EditDoneEvent.cpp  EditDoneEvent.h  EditEvent.cpp  EditEvent.h  ResetShortCutEvent.cpp  ResetShortCutEvent.h
Clipboard++/RmlUI/EventHandlers/Clipboard++Events/Export/: ExportCloseEvent.cpp  ExportCloseEvent.h  ExportEvent.cpp  ExportEvent.h  ExportFileEvent.cpp  ExportFileEvent.h  ExportSearchEvent.cpp  ExportSearchEvent.h
Clipboard++/RmlUI/EventHandlers/Clipboard++Events/Import/: ImportCloseEvent.cpp  ImportCloseEvent.h  ImportEvent.cpp  ImportEvent.h  ImportFileEvent.cpp  ImportFileEvent.h  ImportSearchEvent.cpp  ImportSearchEvent.h
Clipboard++/RmlUI/EventHandlers/Clipboard++Events/Main/: AutoCopyEvent.cpp  AutoCopyEvent.h  ClearEvent.cpp  ClearEvent.h  HelpEvent.cpp  HelpEvent.h  InsertEvent.cpp  InsertEvent.h  LoadEvent.cpp  LoadEvent.h  SlotEvent.cpp  SlotEvent.h
Clipboard++/RmlUI/EventHandlers/Clipboard++Events/ShortCutsMenu/: CopyEvent.cpp  CopyEvent.h  ExpandEvent.cpp  ExpandEvent.h  PasteEvent.cpp  PasteEvent.h  SearchEvent.cpp  SearchEvent.h
Clipboard++/RmlUI/Shell/: CMakeLists.txt
Clipboard++/RmlUI/Shell/src/: PlatformExtensions.cpp  Shell.cpp
Clipboard++/RmlUI/ViewModels/: CMakeLists.txt  EditViewModel.cpp  EditViewModel.h  ShortCutsViewModel.cpp  ShortCutsViewModel.h
Clipboard++/Tests/: CMakeLists.txt
Clipboard++/Tests/KeyShortCuts/: KeyShortCutsManagerTest.cpp
Clipboard++/Tests/MemoryCells/: MemoryManagerTest.cpp  MockClipboardAdapter.h
Clipboard++/Tests/Mocks/: MockClipboardAdapter.h  MockFileManager.h
Clipboard++/Tests/Utils/: StringUtilsTest.cpp  TranslationManagerTets.cpp
Clipboard++/Utils/: CMakeLists.txt  FileManager.cpp  FileManager.h  IFileManager.h  LinkManager.cpp  LinkManager.h  StringUtils.cpp  StringUtils.h  TranslationManager.cpp  TranslationManager.h
Clipboard++/assets/: edit.rml  fileExport.rml  fileImport.rml  hello_world.rml  main.rml  shortcutsMenu.rml  window.rcss
Clipboard++/assets/conf/: shortCuts.csv  shortCutsBase.csv
Clipboard++/assets/styles/: edit.rcss  file.rcss  main.rcss  rml.rcss  shortcutsMenu.rcss
Clipboard++/assets/translations/: en-US.json  en_US.json  es-ES.json  es_ES.json
System tests/: README.md  paths.json
help-guides/: help-en_US.md  help-es_ES.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+78 more)
(+17 files in other folders)
